# chautari_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLANS.md  manage.py  pyproject.toml  start_dev.sh
apps/: permissions.py
apps/authentication/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_user_is_active.py  0004_profile.py  0005_rename_phone_number_verified_profile_is_phone_number_verified.py  0006_verificationtoken.py
apps/listings/: admin.py  filters.py  models.py  paginations.py  serializers.py  urls.py  views.py
apps/listings/management/commands/: create_default_categories.py
apps/listings/migrations/: 0001_initial.py  0002_alter_category_options_listingimage.py  0003_listing_condition.py  0004_savedlisting.py  0005_listingcomment.py
apps/profiles/: serializers.py  urls.py  views.py
apps/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py
chautari/: __init__.py  asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
utils/: constants.py  defaults.py  envelope.py  exception_handler.py  tokens.py
